// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule void configured with style="any" smoketest 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/rules/void.html",
    "messages": [
      {
        "column": 10,
        "context": undefined,
        "line": 10,
        "message": "End tag for <input> must be omitted",
        "offset": 63,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": null,
        "severity": 2,
        "size": 6,
      },
      {
        "column": 6,
        "context": undefined,
        "line": 13,
        "message": "End tag for <div> must not be omitted",
        "offset": 84,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(4)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<div>
	<input />
</div>

<div>
	<input>
</div>

<div>
	<input></input>
</div>

<div />
<div></div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule void configured with style="omit" smoketest 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/rules/void.html",
    "messages": [
      {
        "column": 9,
        "context": undefined,
        "line": 2,
        "message": "Expected omitted end tag <input> instead of self-closing element <input/>",
        "offset": 14,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(1) > input",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 10,
        "context": undefined,
        "line": 10,
        "message": "End tag for <input> must be omitted",
        "offset": 63,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": null,
        "severity": 2,
        "size": 6,
      },
      {
        "column": 6,
        "context": undefined,
        "line": 13,
        "message": "End tag for <div> must not be omitted",
        "offset": 84,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(4)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<div>
	<input />
</div>

<div>
	<input>
</div>

<div>
	<input></input>
</div>

<div />
<div></div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule void configured with style="selfclose" smoketest 1`] = `
[
  {
    "errorCount": 4,
    "filePath": "test-files/rules/void.html",
    "messages": [
      {
        "column": 8,
        "context": undefined,
        "line": 6,
        "message": "Expected self-closing element <input/> instead of omitted end-tag <input>",
        "offset": 38,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(2) > input",
        "severity": 2,
        "size": 1,
      },
      {
        "column": 8,
        "context": undefined,
        "line": 10,
        "message": "Expected self-closing element <input/> instead of omitted end-tag <input>",
        "offset": 61,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(3) > input",
        "severity": 2,
        "size": 1,
      },
      {
        "column": 10,
        "context": undefined,
        "line": 10,
        "message": "End tag for <input> must be omitted",
        "offset": 63,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": null,
        "severity": 2,
        "size": 6,
      },
      {
        "column": 6,
        "context": undefined,
        "line": 13,
        "message": "End tag for <div> must not be omitted",
        "offset": 84,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(4)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<div>
	<input />
</div>

<div>
	<input>
</div>

<div>
	<input></input>
</div>

<div />
<div></div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule void default smoketest 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/rules/void.html",
    "messages": [
      {
        "column": 9,
        "context": undefined,
        "line": 2,
        "message": "Expected omitted end tag <input> instead of self-closing element <input/>",
        "offset": 14,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(1) > input",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 10,
        "context": undefined,
        "line": 10,
        "message": "End tag for <input> must be omitted",
        "offset": 63,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": null,
        "severity": 2,
        "size": 6,
      },
      {
        "column": 6,
        "context": undefined,
        "line": 13,
        "message": "End tag for <div> must not be omitted",
        "offset": 84,
        "ruleId": "void",
        "ruleUrl": "https://html-validate.org/rules/void.html",
        "selector": "div:nth-child(4)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<div>
	<input />
</div>

<div>
	<input>
</div>

<div>
	<input></input>
</div>

<div />
<div></div>
",
    "warningCount": 0,
  },
]
`;

exports[`rule void should contain documentation 1`] = `
{
  "description": "HTML void elements cannot have any content and must not have an end tag.",
  "url": "https://html-validate.org/rules/void.html",
}
`;
